fix z-index issues

--- a/index.css
+++ b/index.css
@@ -111,6 +111,8 @@ background-image: linear-gradient(to right, var(--blue), var(--green), var(--yel
     border-radius: 4px;
     margin: 10px;
     height: 38px;
+    box-sizing: border-box;
+    z-index: 5;
 }
 
 /* IDS */
@@ -200,6 +202,7 @@ background-image: linear-gradient(to right, var(--blue), var(--green), var(--yel
     margin: 0 auto;
     grid-column: 1 / span 6;
     grid-row: 5 / 6;
+    z-index: 5;
 }
 #submit-button:hover, .start-button:hover {
     border: 6px solid transparent;
@@ -300,9 +303,6 @@ background-image: linear-gradient(to right, var(--blue), var(--green), var(--yel
         padding-top: 20px;
         height: 370px;
     }
-    #hit-me-container {
-
-    }
     #hit-me-container p {
         margin: 0 auto 18px 0;
     }
@@ -323,9 +323,6 @@ background-image: linear-gradient(to right, var(--blue), var(--green), var(--yel
         align-content: center;
         width: 90vw;
         margin: 0 auto;
-    }
-    #main-logo {
-
     }
     #main-logo h1 {
         font-size: 210px;
